Specify test variables

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,9 @@ jobs:
         python3 -m pip install ruff coverage[toml] ninja-bear
     - name: Run tests
       shell: bash
+      env:
+        URL: ${{ env.TEST_REPO_URL }}
+        TOKEN: ${{ secrets.TEST_REPO_TOKEN }}
       run: |
         python3 -m unittest discover tests || exit -1
     - name: Check coverage
