--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,9 @@ jobs:
         python3 -m unittest discover tests || exit -1
     - name: Check coverage
       shell: bash
+      env:
+        URL: ${{ vars.TEST_REPO_URL }}
+        TOKEN: ${{ secrets.TEST_REPO_TOKEN }}
       run: |
         python3 -m coverage run -m unittest || exit -1
         python3 -m coverage report || exit -1
